--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-mongodb-example",
+  "name": "latihanuts",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -18,13 +18,14 @@
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-jwt": "^8.4.1",
-    "joi": "^17.12.2",
+    "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
+    "mongodb": "^6.5.0",
     "mongoose": "^7.6.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -43,5 +44,9 @@
     "nodemon": "^3.1.0",
     "pino-pretty": "^10.3.1",
     "prettier": "^3.2.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "Tugas-UTS"
   }
 }
